# genRL

./: .gitignore  README.md  another_thread.py  debug_render.py  helloworld.py  mujoco_rendering_notes.md  render_video.py  setup.cfg  setup.py  test_cartpole_env.py  test_video_recording.py
assets/mjcf/: cartpole_robot.xml  cartpole_scene.xml
assets/mujoco/: cartpole.xml
assets/urdf/: cartpole.urdf
custom_envs/: cartpole.py
docs/: cartpole_environments_comparison.md  genesis_urdf_guide.md  go2_env_usage.md
examples/: cartpole_env.py  cartpole_ppo.py  cleanRL_cartpole_ppo.py  grpo_cartpole.py  gui_render.py  minimalRL_cartpole_ppo.py  mujoco_toy.py  render_video.py  train.py  tune.py  tune_ppo.py
snapshots/: GRPOConfig_reward_history.npy  PPOConfig_reward_history.npy
src/genRL/: configs.py  runners.py  utils.py
src/genRL/configs/: __init__.py  grpo_config.py  ppo_config.py  session_config.py
src/genRL/gym_envs/: base.py
src/genRL/gym_envs/genesis/: cartpole.py
src/genRL/gym_envs/mujoco/: base.py  (+2 more)
src/genRL/rl/: agents.py  buffers.py  grpo.py  ppo.py
src/genRL/tasks/: cartpole.py
src/genRL/wrappers/: __init__.py  record_single_env_video.py  record_video.py  vector_numpy_to_torch.py  vector_record_video.py
tests/: test_mlp.py  test_utils.py  test_video_wrapper.py  test_wandb_logging.py
tests/gym_envs/genesis/: test_cartpole_env.py  test_cartpole_training.py  test_genesis_cartpole_env.py
tests/gym_envs/mujoco/: test_cartpole_training.py  test_mujoco_cartpole_env.py
tests/snapshots/: GRPOConfig_reward_history.npy  PPOConfig_reward_history.npy
(+2 files in other folders)
