[metadata]
name = genRL
version = 0.0
description = RL Blitz
author = Neil Tan
author_email = neil@utensor.ai

[options]
package_dir=
    =src
packages = find:
install_requires =
    torch
    torchvision
    torchaudio
    gymnasium
    # transforms3d
    optuna
    genesis-world
    pytest
    wandb

[options.packages.find]
where = src