[metadata]
name = genRL
version = 0.0
description = RL Blitz
author = Neil Tan
author_email = neil@utensor.ai

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    torch
    torchvision
    torchaudio
    gymnasium
    tyro
    optuna
    genesis-world
    pytest
    wandb
    mujoco
    mediapy

[options.packages.find]
where = src